--- a/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
@@ -58,13 +58,13 @@
 </div>
 
 <div class="container-fluid my-5 d-flex justify-content-center align-items-center" style="min-height: 60vh;">
-    <div class="row " style="padding-left: 110px;">
-        <div th:each="receta : ${recetas}" class="col-md-4 mb-4">
-            <div class="card">
-                <img th:src="@{'/img/recetas/' + ${receta.imagen}}" class="card-img-top" alt="receta">
+    <div class="row" style="padding-left: 110px;">
+        <div th:each="receta : ${recetas}" class="col-md-4 justify-content-center my-5">
+            <div class="card text-center">
+                <img th:src="@{'/img/recetas/' + ${receta.imagen}}" class="card-img-top mx-auto d-block img-fluid" alt="receta_imagen" style="max-width:400px; max-height:400px;">
                 <div class="card-body">
                     <h5 class="card-title">
-                        <a th:href="@{/recetas/{id}(id=${receta.id})}" th:text="${receta.nombre}"></a>
+                        <a th:href="@{/recetas/{id}(id=${receta.id})}" th:text="${receta.nombre}" class="card-title text-center"></a>
                     </h5>
                     <p class="card-text" th:text="${receta.descripcion}"></p>
                 </div>
