comida en el calendario

--- a/src/main/webapp/WEB-INF/views/thymeleaf/actividadesFisicas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/actividadesFisicas.html
@@ -51,7 +51,7 @@
                     <button type="submit" class="card-title" th:text="${ejercicio.nombre}"></button>
                 </h2>
                 <p class="card-text">Intensidad: <span th:text="${ejercicio.intensidad}"></span></p>
-                <p class="card-text">Calorías quemadas: <span th:text="${ejercicio.caloriasQuemadas}"></span></p>
+                <p class="card-text">Calorías quemadas por hora: <span th:text="${ejercicio.caloriasQuemadasPorHora}"></span></p>
             </form>
         </div>
     </div>
