--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <script>
+        function visibilidad(formid) {
+            var form = document.getElementById(formid);
+            var button = document.getElementById("button");
+            if (form.style.display === "none") {
+                form.style.display = "block";
+                button.textContent = "-";
+            } else {
+                form.style.display = "none";
+                button.textContent = "+";
+            }
+        }
+    </script>
 
 </head>
 <body>
@@ -27,41 +40,48 @@
     </div>
 
     <div class="text-center py-3">
-        <h1 th:text="${fechaFormateada}"></h1>
+        <h3 th:text="${fechaFormateada}"></h3>
     </div>
 
-    <p th:text="${mensajeEliminacion}"></p>
+
 <div class="row">
     <div class="col-md-4">
         <div class="colacion" th:if="${desayuno != null}" th:with="alimentos=${desayuno}">
-            <h2>Desayuno</h2>
+            <h4>Desayuno</h4>
         <div th:unless="${#lists.isEmpty(alimentos)}">
             <ul>
                 <li th:each="alimento : ${alimentos}">
-                    <span th:text="${alimento.nombre}">Nombre del Alimento</span>
-                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionDesayuno},fecha=${fecha})}" class="btn btn-danger">Eliminar</a>
+
+                    <a th:href="@{/alimentos/{id}(id=${alimento.id})}" th:text="${alimento.nombre}">Nombre del Alimento</a>
+                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionDesayuno},fecha=${fecha})}" class="btn btn-danger">x</a>
                 </li>
             </ul>
         </div>
-
-    </div>
+            <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form2')|">+</button>
+            <form style="display:none;" id="form2" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
+                <input type="hidden"  id="tipoColacion" value="0" name="tipoColacion" />
+                <input type="hidden"  id="fecha" value="2" name="fecha" />
+                <select multiple="" name="alimentoIds">
+                    <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
+                </select>
+                <button class="btn btn-success" type="submit">Agregar Alimentos</button>
+            </form>
+        </div>
 
     <div class="colacion" th:if="${almuerzo != null}" th:with="alimentos=${almuerzo}">
-        <h2>Almuerzo</h2>
+        <h4>Almuerzo</h4>
         <div th:unless="${#lists.isEmpty(alimentos)}">
             <ul>
-                <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento
-                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},
-                    tipoColacion=${tipoColacionAlmuerzo}, fecha=${fecha})}" >
-                        <button class="btn btn-danger">X</button>
-                    </a>
-                </li>
+                <li th:each="alimento : ${alimentos}">
+                    <a th:href="@{/alimentos/{id}(id=${alimento.id})}" th:text="${alimento.nombre}">Nombre del Alimento</a>
 
+                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionAlmuerzo},fecha=${fecha})}" class="btn btn-danger">x</a>
+                </li>
             </ul>
         </div>
         <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form2')|">+</button>
         <form style="display:none;" id="form2" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="2" name="tipoColacion" />
+            <input type="hidden"  id="tipoColacion" value="1" name="tipoColacion" />
             <input type="hidden"  id="fecha" value="2" name="fecha" />
             <select multiple="" name="alimentoIds">
                 <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
@@ -72,20 +92,19 @@
 
 
     <div class="colacion" th:if="${merienda != null}" th:with="alimentos=${merienda}">
-        <h2>Merienda</h2>
+        <h4>Merienda</h4>
         <div th:unless="${#lists.isEmpty(alimentos)}">
             <ul>
-                <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento
-                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},
-                    tipoColacion=${tipoColacionMerienda}, fecha=${fecha})}" class="btn btn-danger">X</a>
+                <li th:each="alimento : ${alimentos}">
+                    <a th:href="@{/alimentos/{id}(id=${alimento.id})}" th:text="${alimento.nombre}">Nombre del Alimento</a>
 
+                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionMerienda},fecha=${fecha})}" class="btn btn-danger">x</a>
                 </li>
-
             </ul>
         </div>
         <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form3')|">+</button>
         <form style="display:none;" id="form3" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="3" name="tipoColacion" />
+            <input type="hidden"  id="tipoColacion" value="2" name="tipoColacion" />
             <input type="hidden"  id="fecha" value="2" name="fecha" />
             <select multiple="" name="alimentoIds">
                 <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
@@ -96,19 +115,19 @@
 
 
     <div class="colacion" th:if="${cena != null}" th:with="alimentos=${cena}">
-        <h2>Cena</h2>
+        <h4>Cena</h4>
         <div th:unless="${#lists.isEmpty(alimentos)}">
             <ul>
-                <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento
-                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},
-                    tipoColacion=${tipoColacionCena}, fecha=${fecha})}" class="btn btn-danger">X</a>
-                </li>
+                <li th:each="alimento : ${alimentos}">
 
+                    <a th:href="@{/alimentos/{id}(id=${alimento.id})}" th:text="${alimento.nombre}">Nombre del Alimento</a>
+                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionCena},fecha=${fecha})}" class="btn btn-danger">x</a>
+                </li>
             </ul>
         </div>
         <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form4')|">+</button>
         <form style="display:none;" id="form4" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="4" name="tipoColacion" />
+            <input type="hidden"  id="tipoColacion" value="3" name="tipoColacion" />
             <input type="hidden"  id="fecha" value="2" name="fecha" />
             <select multiple="" name="alimentoIds">
                 <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
@@ -119,18 +138,18 @@
 
 
     <div class="colacion" th:if="${snacks != null}" th:with="alimentos=${snacks}">
-        <h2>Snacks</h2>
+        <h4>Snacks</h4>
         <div th:unless="${#lists.isEmpty(alimentos)}">
             <ul>
-                <li th:each="alimento : ${alimentos}" th:text="${alimento.nombre}">Nombre del Alimento
-                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},
-                     tipoColacion=${tipoColacionSnacks}, fecha=${fecha})}" class="btn btn-danger">X</a>
+                <li th:each="alimento : ${alimentos}">
+                    <a th:href="@{/alimentos/{id}(id=${alimento.id})}" th:text="${alimento.nombre}">Nombre del Alimento</a>
+                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionSnacks},fecha=${fecha})}" class="btn btn-danger">x</a>
                 </li>
             </ul>
         </div>
         <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form5')|">+</button>
         <form style="display:none;" id="form5" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="1" name="tipoColacion" />
+            <input type="hidden"  id="tipoColacion" value="4" name="tipoColacion" />
             <input type="hidden"  id="fecha" value="2" name="fecha" />
             <select multiple="" name="alimentoIds">
                 <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
@@ -142,8 +161,8 @@
     <div class="col-md-8">
         <div id="calendar">
             <div id="monthAndYear"></div>
-            <button id="prevMonth">Anterior</button>
-            <button id="nextMonth">Siguiente</button>
+            <button id="prevMonth">&lt;</button>
+            <button id="nextMonth">&gt;</button>
             <table id="calendarTable">
                 <thead>
                 <tr>
@@ -289,6 +308,7 @@
 </script>
 </body>
 <style>
+
 
     .colacion {
         border: 1px solid black;
